--- a/BMPD.ipynb
+++ b/BMPD.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,11 @@
     "    output_dir = path.dirname(image_path).replace(raw_data_location, synthetic_data_location)\n",
     "    make_directory(output_dir)\n",
     "\n",
-    "    constrast = get_constrast_from_suffix(bids_image_file.suffix)\n",
+    "    contrast = get_constrast_from_suffix(bids_image_file.suffix)\n",
     "\n",
-    "    !sct_propseg -i {image_path} -c {constrast} -ofolder {output_dir}\n",
+    "    qc_output_dir = f\"{output_dir}/qc-{contrast}\"\n",
+    "\n",
+    "    !sct_propseg -i {image_path} -c {contrast} -ofolder {output_dir} -qc {qc_output_dir}\n",
     "\n",
     "\n",
     "def segment_images(images):\n",
